# Chrona

./: .gitignore  GET_STARTED.md  README.md  test-llm-inference.ps1
data/: .gitkeep
docs/: README.md
python/: README.md  requirements.txt
rust/: Cargo.toml  PARQUET_OUTPUTS.md  test_sensor_data.sqlite3
rust/chrona-ingest/: Cargo.toml  README.md
rust/chrona-ingest/src/: llm_context.rs  main.rs  simulator.rs
rust/core-types/: Cargo.toml
rust/core-types/src/: lib.rs
rust/data-layer/: Cargo.toml  README.md
rust/data-layer/src/: lib.rs  parquet.rs  profile.rs  query.rs  sqlite.rs
rust/llm-runtime/: Cargo.toml
rust/llm-runtime/src/: lib.rs
rust/logic/: Cargo.toml
rust/logic/examples/: mhealth_8gb_pipeline.rs
rust/logic/src/: lib.rs
rust/ml-runtime/: Cargo.toml
rust/ml-runtime/src/: lib.rs  tflite_model.rs
rust/sensors/: Cargo.toml
rust/sensors/src/: lib.rs
rust/ui/: Cargo.toml
rust/ui/src/: display_mode.rs  lib.rs  main.rs  main_v2.rs  tier_engine.rs  watch_face.rs
sql/: README.md
