[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chrona"
path = "src/main.rs"

[dependencies]
core-types = { path = "../core-types" }
logic = { path = "../logic" }
sensors = { path = "../sensors" }
data-layer = { path = "../data-layer" }
ml-runtime = { path = "../ml-runtime" }
llm-runtime = { path = "../llm-runtime" }
iced = { version = "0.12", features = ["debug", "tokio", "canvas"] }
chrono = "0.4"
